# wasp-agent

./: .gitignore  .gitleaks.toml  Cargo.toml  Containerfile  Containerfile.wasp  Dockerfile  Makefile  OWNERS  OWNERS_ALIASES  README.md  e2e-test.sh  go.mod  go.sum  to.sh
.github/workflows/: build-n-push.yaml  verify.yaml
OCI-hook/: hook.sh  hookscript.template  swap-for-burstable.json
automation/: test.sh
cluster-sync/: clean.sh  install.sh  sync.sh
cluster-up/cluster/: k8s-provider-common.sh
cmd/wasp/: wasp.go
contrib/: agent.sh  common.sh  ds.sh  hook.json  hook.sh  node-local-cache.sh  pods_cache.sh
docs/: configuration.md  strategies.md
docs/runbooks/: NodeCriticalMemoryUtilization.md  NodeHighMemoryUtilization.md  NodeHighSwapActivity.md
examples/: fedora.yaml  static.yaml  stress.yaml  vm.yaml
hack/: bump-kubevirtci.sh  cluster-up.sh  common-funcs.sh  common.sh  config.sh  custom-boilerplate.go.txt  dockerized  gen-proto.sh  publish-staging.sh  release.sh  sync-kubevirtci.sh  update-kubevirtci.sh
hack/builder/: Dockerfile  build_and_push.sh  rsyncd.conf
images/: Dockerfile
manifests/: demo.yaml  ds.yaml  fedora.yaml  kubelet-configuration-with-swap.yaml  machineconfig-add-swap.yaml  mco-add-swap.yaml  prep-hco.yaml  prometheus-rules.yaml  sa.yaml  static.yaml  stress.yaml  vm.yaml
manifests/openshift/: ds.yaml  hco-set-memory-overcommit.yaml  kubelet-configuration-with-swap.yaml  machineconfig-add-swap.yaml  (+1 more)
src/: .lib.rs.swp  .main.rs.swp  lib.rs  main.rs
tests/: monitoring_test.go  tests_suite_test.go  wasp_test.go
(+41 files in other folders)
