[package]
name = "wasp-operator-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
env_logger = "0.10.1"
futures = "0.3.29"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["kube-client", "jsonpatch"] }
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
wax = "0.6.0"
